k8s.yml

# apiVersion: v1
# kind: LimitRange
# metadata:
#   name: cpu-resource-constraint
# spec:
#   limits:
#     - type: "Pod"
#       max:
#         cpu: "500m"
#         memory: "4Gi"
#       min:
#         cpu: "10m"
#         memory: "5Mi"
#     - type: "Container"
#       max:
#         cpu: "500m"
#         memory: "4Gi"
#       min:
#         cpu: "10m"
#         memory: "5Mi"
#       default:
#         cpu: "100m"
#         memory: "100Mi"

# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-app-ingress
  namespace: booking
  
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/proxy-set-headers: "Host: $http_host, X-Forwarded-For: $proxy_add_x_forwarded_for, X-Forwarded-Proto: $scheme, Upgrade: $http_upgrade"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "off"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "off"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/add-base-url : "true"
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/server-snippets: |
      location /chat/ws/ {
            proxy_http_version 1.1;
            proxy_set_header Connection "upgrade";
      }
      
      location /images/hotels {
            client_max_body_size 10M;
            proxy_buffering on;
      }
      location /static {
            proxy_pass http://booking:8000/static;
      }
spec:
  rules:
  - host: booking.it
    http:
      paths:
      - path: /(flower/.*)
        pathType: Prefix
        backend:
          service:
            name: booking-celery-app
            port:
              number: 5555
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: booking
            port:
              number: 8000
            

---

apiVersion: v1
kind: Service
metadata:
  labels:
    tier: booking-db
    app: booking-app
  name: booking-db
spec:
  selector:
    tier: booking-db
  ports:
  - nodePort: 30000
    port: 5431
    targetPort: 5432
    protocol: TCP
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    tier: booking-redis
    app: booking-app
  name: booking-redis
spec:
  selector:
    tier: booking-redis
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  labels:
    tier: booking
    app: booking-app
  name: booking
spec:
  selector:
    tier: booking
  ports:
    - nodePort: 30002
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    tier: booking-celery-app
    app: booking-app
  name: booking-celery-app
spec:
  selector:
    tier: booking-celery-app
  ports:
    - nodePort: 30005
      port: 5555
      targetPort: 5555
      protocol: TCP
  type: NodePort

---

# apiVersion: v1
# kind: Deployment
# metadata:
#   name: nginx
#   labels:
#     tier: nginx
# spec:
#   selector:
#     matchLabels:
#       tier: nginx
#   template:
#     metadata:
#       labels:
#         tier: nginx
#     spec:
#       containers:
#         - name: booking_nginx
#           image: localhost:32000/booking_nginx:latest
#           ports:
#             - containerPort: 80
#             - containerPort: 443
#           resources:
#             limits:
#               memory: "128Mi"
#               cpu: "500m"
#             requests:
#               memory: "128Mi"
#               cpu: "50m"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-db
  labels:
    tier: booking-db
    app: booking-app
spec:
  selector:
    matchLabels:
      tier: booking-db
  template:
    metadata:
      labels:
        tier: booking-db
    spec:
      volumes:
        - name: booking-pv-storage
          persistentVolumeClaim:
            claimName: booking-pv-claim
      containers:
        - name: booking-db
          image: postgres:15
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: booking-pv-storage
              mountPath: /var/lib/postgresql/data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-redis
  labels:
    tier: booking-redis
    app: booking-app
spec:
  selector:
    matchLabels:
      tier: booking-redis
  template:
    metadata:
      labels:
        tier: booking-redis
    spec:
      containers:
      - name: booking-redis
        image: redis:7
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 6379
          protocol: TCP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
  labels:
    tier: booking
    app: booking-app
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: booking
  template:
    metadata:
      labels:
        tier: booking
    spec:
      
      volumes:
        - name: booking-pv-storage-1
          persistentVolumeClaim:
            claimName: booking-pv-claim-1
      containers:
        - name: booking
          image: localhost:32000/booking_app:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ['alembic upgrade head && gunicorn app.main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000']
          readinessProbe:
              httpGet:
                path: /pages
                port: 8000
              initialDelaySeconds: 5
              periodSeconds: 3
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: booking-pv-storage-1
              mountPath: ~/booking


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-celery-app
  labels:
    tier: booking-celery-app
    app: booking-app
spec:
  selector:
    matchLabels:
      tier: booking-celery-app
  template:
    metadata:
      labels:
        tier: booking-celery-app
    spec:
      volumes:
        - name: booking-pv-storage-1
          persistentVolumeClaim:
            claimName: booking-pv-claim-1
      containers:
        - name: booking-celery
          imagePullPolicy: Always
          image: localhost:32000/booking_app:latest
          command: ["/bin/sh", "-c"]
          args: ['celery --app=app.tasks.celery:celery worker -l INFO']
          resources:
            limits:
              memory: "3Gi"
              cpu: "500m"
          # livenessProbe:
          #   exec:
          #     # bash is needed to replace the environment variable
          #     command: [
          #       "bash",
          #       "-c",
          #       "celery -A app.tasks.celery inspect ping  -d celery@$HOSTNAME"
          #     ]
          #   initialDelaySeconds: 30
          #   periodSeconds: 60     
          volumeMounts:
            - name: booking-pv-storage-1
              mountPath: ~/booking      
        - name: booking-celery-beat
          image: localhost:32000/booking_app:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ['celery --app=app.tasks.celery:celery worker -l INFO -B']
          resources:
            limits:
              memory: "3Gi"
              cpu: "500m"
          volumeMounts:
            - name: booking-pv-storage-1
              mountPath: ~/booking
        - name: booking-flower
          image: localhost:32000/booking_app:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ['celery --app=app.tasks.celery:celery flower --url_prefix=/flower']
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 5555
              protocol: TCP
